Khaadi clothing store responsive design

--- a/frontend/src/components/breadcrums/Breadcrums.css
+++ b/frontend/src/components/breadcrums/Breadcrums.css
@@ -11,3 +11,27 @@
 .breadcrums>img{
     width: 20px;
 }
+
+@media (max-width: 1280px){
+    .breadcrums{
+        margin: 30px 50px;
+        font-size: 14px;
+    }
+}
+@media (max-width: 1024px){
+    .breadcrums{
+        margin: 30px 30px;
+        font-size: 13px;
+    }
+}
+@media (max-width: 800px){
+    .breadcrums{
+        margin: 30px 10px;
+        font-size: 12px;
+    }
+}
+@media (max-width: 500px){
+    .breadcrums{
+        font-size: 10px;
+    }
+}
