--- a/frontend/src/components/newsLetter/NewsLetter.css
+++ b/frontend/src/components/newsLetter/NewsLetter.css
@@ -49,3 +49,109 @@
     font-size: 16px;
     cursor: pointer;
 }
+
+@media (max-width: 1280px){
+    .newsletter{
+        padding: 0px 80px;
+        margin-bottom: 120px;
+        gap: 20px;
+    }
+    .newsletter>h1{
+        font-size: 36px;
+    }
+    .newsletter>p{
+        font-size: 16px;
+    }
+    .input{
+        width: 600px;
+        height: 60px;
+    }
+    .input>input{
+        width: 400px;
+    }
+    .input>button{
+        width: 160px;
+        height: 60px;
+    }
+}
+
+@media (max-width: 1024px){
+    .newsletter{
+        margin-top: 240px;
+        margin-bottom: 60px;
+
+    }
+    .newsletter>h1{
+        font-size: 30px;
+    }
+    .newsletter>p{
+        font-size: 14px;
+    }
+    .input{
+        width: 500px;
+        height: 50px;
+    }
+    .input>input{
+        width: 300px;
+        font-size: 14px;
+    }
+    .input>button{
+        width: 120px;
+        height: 50px;
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 800px){
+    .newsletter{
+        margin-top: 0;
+        margin-bottom: 30px;
+        height: 35vh;
+    }
+    .newsletter>h1{
+        font-size: 18px;
+    }
+    .newsletter>p{
+        font-size: 12px;
+    }
+    .input{
+        width: 400px;
+        height: 40px;
+    }
+    .input>input{
+        width: 200px;
+        font-size: 13px;
+    }
+    .input>button{
+        width: 100px;
+        height: 40px;
+        font-size: 13px;
+    }
+}
+
+@media (max-width: 500px){
+    .newsletter{
+        height: 25vh;
+        width: 100%;
+        padding: 0;
+        gap: 15px;
+    }
+    .newsletter>h1{
+        font-size: 16px;
+    }
+    .newsletter>p{
+        font-size: 13px;
+        max-width: 200px;
+        text-align: center;
+    }
+    .input{
+        width: 290px;
+        height: 40px;
+    }
+    .input>input{
+        width: 130px;
+        font-size: 13px;
+    }
+}
+
+
