--- a/frontend/src/components/cartItems/CartItems.css
+++ b/frontend/src/components/cartItems/CartItems.css
@@ -104,3 +104,61 @@
     font-size: 16px;
     cursor: pointer;
 }
+
+@media (max-width: 1280px){
+    .cartitems{
+        margin: 60px 50px;
+    }
+    .format-main{
+        grid-template-columns: 0.5fr 3fr 0.5fr 0.5fr 0.5fr 0.5fr;
+        gap: 20px;
+        padding: 15px 0;
+        font-size: 15px;
+    }
+    .product-icon{
+        height: 50px;
+    }
+    .remove-icon{
+        margin: auto;
+    }
+    .quantity{
+        width: 40px;
+        height: 30px;
+    }
+
+    .cartitems-down{
+        margin: 80px 0;
+        flex-direction: column;
+        gap: 80px;
+    }
+    .total{
+        margin: 0;
+    }
+    .total>button{
+        min-width: 200px;
+        height: 45px;
+        font-size: 13px;
+    }
+    .promobox{
+        width: auto;
+        max-width: 500px;
+    }
+    .promobox>input{
+        width: 100%;
+    }
+    .promobox>button{
+        width: 120px;
+        margin-left: -125px;
+    }
+}
+
+@media (max-width: 800px){
+    .format-main{
+        display: none;
+    }
+    .format{
+        display: grid;
+        grid-template-columns: 0.5fr 3fr 0.5fr;
+        gap: 10px;
+    }
+}
