--- a/frontend/src/components/descriptionBox/DescriptionBox.css
+++ b/frontend/src/components/descriptionBox/DescriptionBox.css
@@ -29,3 +29,17 @@
 .description>p{
     text-align: justify;
 }
+
+@media (max-width:1280px){
+    .description-box{
+        margin: 60px;
+    }
+}
+@media (max-width: 800px){
+    .description-box{
+        margin: 60px 20px;
+    }
+    .description{
+        font-size: 14px;
+    }
+}
