--- a/frontend/src/pages/CSS/LoginSignup.css
+++ b/frontend/src/pages/CSS/LoginSignup.css
@@ -1,8 +1,8 @@
 .login{
     width: 100%;
     height: 100vh;
-    background: #fce3fe;
-    padding-top: 100px;
+    background-color: #fce3fe;
+    padding: 100px 0;
     margin-bottom: 100px;
 }
 .login-container{
@@ -42,7 +42,6 @@
     font-size: 24px;
     font-weight: 500;
     cursor: pointer;
-    margin-left: 50px;
 }
 .login-login{
     margin-top: 20px;
@@ -62,4 +61,55 @@
     color: #5c5c5c;
     font-size: 18px;
     font-weight: 500;
+}
+
+@media (max-width: 1280px){
+    .login{
+        padding: 50px 0;
+    }
+    .login-container{
+        width: auto;
+        max-width: 500px;
+        max-height: 500px;
+    }
+    .login-container>h1{
+        margin: 10px 0;
+    }
+    .login-fields{
+        gap: 20px;
+        margin-top: 20px;
+    }
+    .login-fields>input{
+        height: 65px;
+        width: 93%;
+    }
+    .login-container>button{
+        width: 100%;
+    }
+    .login-login{
+        font-size: 16px;
+    }
+    .login-agree{
+        font-size: 14px;
+        gap: 10px;
+    }
+}
+
+@media (max-width: 800px){
+    .login-container{
+        padding: 20px 30px;
+    }
+    .login-container>h1{
+        font-size: 24px;
+    }
+    .login-fields{
+        margin-top: 20px;
+    }
+    .login-fields>input{
+        height: 50px;
+    }
+    .login-container>button{
+        height: 50px;
+        font-size: 16px;
+    }
 }
