--- a/frontend/src/pages/CSS/ShopCategory.css
+++ b/frontend/src/pages/CSS/ShopCategory.css
@@ -1,5 +1,5 @@
 
-.shop-category>img{
+.shopcategory-banner{
     display: block;
     margin: 30px auto;
     width: 82%;
@@ -50,4 +50,57 @@
     border: none;
     outline: none;
     cursor: pointer;
+}
+
+@media (max-width: 1280px){
+    .shopcategory-banner{
+        margin: 20px auto;
+        width: 90%;
+        object-fit: contain;
+    }
+    .shopcategory-indexsort{
+        width: 90%;
+        margin: auto;
+    }
+    .shopcategory-indexsort>p{
+        font-size: 12px;
+    }
+    .shopcategory-sort{
+        padding: 5px 10px;
+        font-size: 12px;
+    }
+    .shopcategory-products{
+        width: 90%;
+        margin: 10px auto;
+        row-gap: 40px;
+    }
+    .shopcategory-products .items{
+        margin: auto;
+    }
+    .shopcategory-loadmore>button{
+        margin: 100px auto;
+        width: 200px;
+        height: 60px;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 800px){
+    .shopcategory-banner{
+        width: 95%;
+    }
+    .shopcategory-products{
+        width: 95%;
+    }
+    .shopcategory-loadmore>button{
+        margin: 60px auto;
+        width: 150px;
+        height: 40px;
+        font-size: 13px;
+    }
+}
+@media (max-width: 500px){
+    .shopcategory-products{
+        grid-template-columns: 1fr 1fr;
+    }
 }
